doclouddeploy.yaml
# POSTGRES CONFIG
# gcloud compute disks create --size 200GB postgres-disk
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: dashboard-config
# data:
#   WS_SECRET: 'eth-net-stats-secret'
# ---
apiVersion: v1
kind: Service
metadata:
  name: node1-public
  labels:
    app: node1-deployment
    tier: backend1
  # annotations:
  #   service.beta.kubernetes.io/do-loadbalancer-certificate-id: "1234-5678-9012-3456"
  #   service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
  #   service.beta.kubernetes.io/do-loadbalancer-hostname: "ropsten.harpangell.com"
  #   service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: NodePort
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: node1-deployment
    tier: backend1
---
apiVersion: v1
kind: Service
metadata:
  name: node1
  labels:
    app: node1-deployment
    tier: backend1
spec:
  # type: NodePort
  ports:
  - port: 30311
    targetPort: 30311
  selector:
    app: node1-deployment
    tier: backend1
---
# ethereum DEPLOY
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node1-deployment
  labels:
    app: node1-deployment
    tier: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node1-deployment
      tier: backend1
  template:
    metadata:
      labels:
        app: node1-deployment
        tier: backend1
    spec:
      containers:
      - name: node1-deployment
        image: registry.digitalocean.com/hautils/node1
        imagePullPolicy: Always
        ports:
        - containerPort: 30311
        # volumeMounts:
        #     - mountPath: /root/ethereum
        #       name: ethereumdb
        command: [
          "geth",
          "--datadir", "/root/ethereum",
          "--syncmode", "full",
          "--port", "30311",
          "--rpc",
          "--rpcaddr", "0.0.0.0",
          "--rpcport", "8501",
          "--rpccorsdomain", "*",
          "--rpcvhosts", "*",
          "--rpcapi", "eth,web3,personal,net",
          "--ws",
          "--wsaddr", "0.0.0.0",
          "--wsapi", "eth,web3,personal,net",
          "--wsorigins", "*",
          "--networkid", "32414",
          "--gasprice", "0",
          "--unlock", "0",
          "--password", "password.txt",
          "--mine",
          "--allow-insecure-unlock",
          "--nodiscover"
        ]
      # volumes:
      # - name: ethereumdb
      #   gcePersistentDisk:
      #     fsType: ext4
      #     pdName: ethereum-disk
---
apiVersion: v1
kind: Service
metadata:
  name: node2-public
  labels:
    app: node1-deployment
    tier: backend2
spec:
  type: NodePort
  ports:
  - port: 8502
    targetPort: 8502
  selector:
    app: node2-deployment
    tier: backend2
---
apiVersion: v1
kind: Service
metadata:
  name: node2
  labels:
    app: node2-deployment
    tier: backend2
spec:
  # type: NodePort
  ports:
  - port: 30312
    targetPort: 30312
  selector:
    app: node2-deployment
    tier: backend2
---
# ethereum DEPLOY
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node2-deployment
  labels:
    app: node2-deployment
    tier: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node2-deployment
      tier: backend2
  template:
    metadata:
      labels:
        app: node2-deployment
        tier: backend2
    spec:
      containers:
      - name: node2-deployment
        image: registry.digitalocean.com/hautils/node2
        imagePullPolicy: Always
        ports:
        - containerPort: 30312
        # volumeMounts:
        #     - mountPath: /root/ethereum
        #       name: ethereumdb
        command: [
          "geth",
          "--datadir", "/root/ethereum",
          "--syncmode", "full",
          "--port", "30312",
          "--rpc",
          "--rpcaddr", "0.0.0.0",
          "--rpcport", "8502",
          "--rpccorsdomain", "*",
          "--rpcvhosts", "*",
          "--rpcapi", "eth,web3,personal,net",
          "--ws",
          "--wsaddr", "0.0.0.0",
          "--wsapi", "eth,web3,personal,net",
          "--wsorigins", "*",
          "--networkid", "32414",
          "--gasprice", "0",
          "--unlock", "0",
          "--password", "password.txt",
          "--mine",
          "--allow-insecure-unlock",
          "--nodiscover"
        ]
      # volumes:
      # - name: ethereumdb
      #   gcePersistentDisk:
      #     fsType: ext4
      #     pdName: ethereum-disk
